# dogemask

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs
extension/: package-lock.json  package.json  vite.config.js
extension/config/: webpack.config.js
extension/public/: index.html
extension/src/: Address.jsx  App.css  App.js  App.jsx  CreateWallet.js  CreateWallet.jsx  Wallet.js  Wallet.jsx  constants.js  manifest.json  useFetch.js  useLocalStorage.js  utils.js
extension/src/styles/: doge-eyes.css
web/: Cargo.toml  db.sql  index.html  package-lock.json  package.json  test.js  vite.config.ts  vite.config.ts.timestamp-1681149279505.mjs
web/src/: Counter.tsx  auth.html  main.rs  main.tsx
web/templates/: index.html
